compiler/tests/compiler/must_fail/t_01.mil
extern fn test();

/*
START:CMD
ARG="print[input]"
END:CMD
*/
